Save `project2-gitlet-primitive` before unit testing refactor