@@ -1,5 +1,8 @@
 package com.gitletx.objects.blob;
 
+import com.gitletx.utilities.IGLPaths;
+import com.gitletx.utilities.hashing.IHashing;
+
 import java.io.Serializable;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -14,43 +17,58 @@ import java.nio.file.Paths;
 public class GLBlob implements Serializable, IGLBlob {
 
     private final String fileName;
-    private final String filePath;
-    private final String hash;
+    private String filePath;
+    private String hash;
     private final String type = "blob";
-
     private byte[] content;
 
-    public GLBlob() {
+    transient private IHashing hashing;
+    transient private IGLPaths paths;
+
+    public GLBlob(IHashing hashing, IGLPaths paths) {
+        this.hashing = hashing;
         this.fileName = null;
         this.content = null;
         this.hash = null;
         this.filePath = null;
-//        this.hash = Utils.sha1("");
-//        this.filePath = Repository.CWD.toString();
+        this.hash = this.hashing.sha1("");
+        this.paths = paths;
+        this.filePath = this.paths.getCWD();
     }
 
-    public GLBlob(Path filePath) {
+    public GLBlob(Path filePath, IHashing hashing) {
+        this.hashing = hashing;
         this.fileName = setFileName(filePath);
-        this.hash = setHash(filePath);
-        this.filePath = setFilePath(filePath);
+        this.hash = setHash(filePath.toString());
+        this.filePath = setFilePath(filePath.toString());
     }
 
     public String getType() {
         return this.type;
     }
 
-    private String setHash(Path path) {
+    private String setHash(String path) {
+        Path realPath = Path.of(path);
+
         // Set content as well
-//        this.content = Utils.readContents(path.toFile());
+//        this.content = Utils.readContents(realPath.toFile());
         this.content = null;
 
-//        return Utils.sha1(this.content);
-        return null;
+        return this.hashing.sha1(this.content);
     }
 
-    private String setFilePath(Path path) {
-        return null;
-//        return Paths.get(path.relativize(Repository.CWD.toPath()).toString(), this.fileName).toString();
+    public String setHashWrapper(String filePath) {
+        return setHash(filePath);
+    }
+
+    private String setFilePath(String path) {
+        Path realPath = Path.of(path);
+        System.out.println(realPath);
+        return Paths.get(realPath.relativize(Path.of(this.paths.getCWD())).toString(), this.fileName).toString();
+    }
+
+    public String setFilePathWrapper(String filePath) {
+        return setFilePath(filePath);
     }
 
     private String setFileName(Path path) {
